[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securiscan"
version = "0.1.0"
description = "Professional Web Security Testing Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Charles Shaw", email = "charles@charlesshaw.net"}
]
maintainers = [
    {name = "Charles Shaw", email = "charles@charlesshaw.net"}
]
keywords = ["security", "web", "scanner", "pentest", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pydantic>=1.9.0",
    "typer>=0.6.0",
    "rich>=12.0.0",
    "jinja2>=3.1.0",
    "urllib3>=1.26.0",
    "certifi>=2022.5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
    "pre-commit>=2.19.0",
    "tox>=3.25.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
]
browser = [
    "playwright>=1.22.0",
]
pdf = [
    "reportlab>=3.6.0",
]
all = [
    "securiscan[dev,docs,browser,pdf]",
]

[project.urls]
"Homepage" = "https://github.com/shawcharles/SecuriScan"
"Bug Tracker" = "https://github.com/shawcharles/SecuriScan/issues"
"Documentation" = "https://securiscan.readthedocs.io/"
"Source Code" = "https://github.com/shawcharles/SecuriScan"

[project.scripts]
securiscan = "securiscan.cli:main"

[tool.setuptools]
packages = ["securiscan"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
